learn img layout issues
Former-commit-id: ff8cd4c7f85fdccdd11b684e47c0898ad7a9ae23 [formerly 23a725ce2b987e5892becdb3287b162d04a45441]
Former-commit-id: c81215e84fdfe579f65d349302d36fc3654d608b

--- a/css/learn.nest.sass.css
+++ b/css/learn.nest.sass.css
@@ -304,6 +304,8 @@ header {
   margin-left: auto; }
 
 /*Block level elements, and non-text objects */
+/*hoh asks: is this file intentionally commented out?*/
+/* */
 .container {
   width: 94%;
   margin: auto; }
@@ -404,15 +406,24 @@ aside {
   -webkit-flex-flow: column nowrap;
   -moz-flex-flow: column nowrap;
   flex-flow: column nowrap;
-  -webkit-box-align: end;
-  -moz-box-align: end;
-  box-align: end;
-  -webkit-align-items: flex-end;
-  -moz-align-items: flex-end;
-  -ms-align-items: flex-end;
-  -o-align-items: flex-end;
-  align-items: flex-end;
-  -ms-flex-align: end;
+  -webkit-box-align: flex-endcenter;
+  -moz-box-align: flex-endcenter;
+  box-align: flex-endcenter;
+  -webkit-align-items: flex-endcenter;
+  -moz-align-items: flex-endcenter;
+  -ms-align-items: flex-endcenter;
+  -o-align-items: flex-endcenter;
+  align-items: flex-endcenter;
+  -ms-flex-align: flex-endcenter;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
   margin: 15px; }
   .innerDiv p {
     width: calc(100% - 3rem);
@@ -476,7 +487,6 @@ aside {
   margin: 0 15px 15px 15px; }
 
 .pix {
-  margin: 15px;
   -webkit-box-flex: auto;
   -moz-box-flex: auto;
   box-flex: auto;
